@@ -1,0 +1,2 @@
+verilog/t_80_foo.v
+-F verilog/t_80_bar/bar.f
