@@ -35,7 +35,7 @@ autoflush STDERR 1;
 Getopt::Long::config ("no_auto_abbrev","pass_through");
 GetOptions ("debug" => \&debug);  # Snarf --debug ASAP, before parse -f files
 
-my $Opt = new Verilog::Getopt();
+my $Opt = new Verilog::Getopt(filename_expansion=>1);
 @ARGV = $Opt->parameter(@ARGV);
 Getopt::Long::config ("no_auto_abbrev","no_pass_through");
 if (! GetOptions (
@@ -158,6 +158,12 @@ Defines the given preprocessor symbol.
 
 Read the specified file, and act as if all text inside it was
 specified as command line parameters.
+
+=item -f I<file>
+
+Read the specified file, and act as if all text inside it was specified as
+command line parameters.  Any relative paths are relative to the current
+directory.
 
 =item +incdir+I<dir>
 =item -II<dir>
