@@ -9,6 +9,8 @@ indicates the contributor was also the author of the fix; Thanks!
 
 ***	Fix expansion of back-slashed escaped macros, bug441.  [Alberto Del Rio]
 
+***	Fix -F relative filename parsing, bug444. [Jeremy Bennett]
+
 ****	Fix c style var array declarations. [by Jack Cummings]
 
 ****	Fix --debug parsing after -f files, bug442. [Jeremy Bennett]
